<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/iv_config"
            android:scaleType="centerInside"
            android:layout_gravity="right"
            android:src="@drawable/ic_settings_white_24dp"
            android:onClick="onClickSetting"
            android:layout_width="48dp"
            android:layout_height="48dp"/>

    </FrameLayout>

    <ScrollView
        android:background="@color/lsq_color_gray_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:id="@+id/video_record_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickCapture"
                android:layout_marginTop="1px"
                app:text="@string/title_record" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:id="@+id/audio_record_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1px"
                android:onClick="onClickAudioCapture"
                app:text="@string/title_audio_record" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:id="@+id/screen_record_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:onClick="onClickScreenRecord"
                app:text="@string/title_screen_record" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="20dp"
                android:onClick="onClickImportAndRecord"
                app:text="@string/title_import_and_edit" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:id="@+id/mix_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:onClick="onClickMixRecord"
                app:text="制作视频合拍" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:id="@+id/video_mix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:onClick="onClickVideoMix"
                app:text="制作视频拼图" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:id="@+id/image_compose_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:onClick="onClickImageCompose"
                app:text="@string/title_image_compose" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:id="@+id/gif_make_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:onClick="onClickMakeGIF"
                app:text="@string/title_gif" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:id="@+id/ar_make_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="20dp"
                android:onClick="onClickAR"
                app:text="@string/title_ar_effect" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:id="@+id/draft_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:onClick="onClickDraftBox"
                app:text="@string/title_from_draft_box" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:id="@+id/item_version_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:text="版本信息" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:id="@+id/item_compile_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:text="编译时间" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>