<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/top_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@mipmap/btn_back"
            android:onClick="onClickBack" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/title_video_divide"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@mipmap/btn_next"
            android:onClick="onClickDone" />
    </LinearLayout>

    <com.qiniu.pili.droid.shortvideo.demo.view.SquareRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <VideoView
            android:id="@+id/preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />

        <ImageButton
            android:id="@+id/pause_playback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="300dp"
            android:background="#0000"
            android:onClick="onClickPlayback"
            android:src="@mipmap/btn_pause" />
    </com.qiniu.pili.droid.shortvideo.demo.view.SquareRelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorSpeedPanel"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onClickAdd"
                    android:padding="15dp"
                    android:text="@string/divide_add_tip"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/scroll_view_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical">

                <com.qiniu.pili.droid.shortvideo.demo.view.ObservableHorizontalScrollView
                    android:id="@+id/scroll_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <RelativeLayout
                        android:id="@+id/recycler_parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recycler_frame_list"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </RelativeLayout>
                </com.qiniu.pili.droid.shortvideo.demo.view.ObservableHorizontalScrollView>

                <ImageView
                    android:id="@+id/middle_line_image"
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/frame_selector_middle_line" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:text="@string/divide_delete_tip"
                android:textColor="#aaaaaa" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>